Fix SonarQube issues (3)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>